--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,3 @@
-import dependencies.AndroidX
-
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
@@ -22,10 +20,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$GradleConfig.kotlinVersion"
-    implementation AndroidX.appcompat
-    implementation AndroidX.core_ktx
-    implementation AndroidX.constraintlayout
-    testImplementation JUnit.junit
-    androidTestImplementation AndroidX.espresso_core
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$Dependencies.kotlinVersion"
+
+    implementation Dependencies.androidx_core_ktx
+    implementation Dependencies.androidx_appcompat
+    implementation Dependencies.androidx_constraintlayout
+
+    // Unit Test
+    testImplementation Dependencies.test_junit
+
+    // Instrumented Test
+    androidTestImplementation Dependencies.androidTest_espresso
+    androidTestImplementation Dependencies.androidTest_rules
+    androidTestImplementation Dependencies.androidTest_runner
 }
