--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript { 
-    ext.kotlin_version = '1.3.61'
-
+buildscript {
     repositories {
         google()
         jcenter()
@@ -10,8 +8,8 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.5.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Dependencies.kotlinVersion}"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$Dependencies.kotlinVersion"
+    }
 }
 
 allprojects {
