--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="br.com.andretortolano.moviestack">
 
     <application
+        android:name=".MovieStackApp"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/MovieStack.AppTheme">
         <activity
-            android:name=".Splash"
+            android:name=".ui.SplashActivity"
             android:theme="@style/MovieStack.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
