--- a/core/build.gradle
+++ b/core/build.gradle
@@ -16,6 +16,9 @@ dependencies {
     implementation Dependencies.androidx_core_ktx
     implementation Dependencies.androidx_appcompat
     implementation Dependencies.androidx_constraintlayout
+    implementation Dependencies.androidx_lifecycle
+    implementation Dependencies.androidx_lifecycle_savestate
+    implementation Dependencies.androidx_viewmodel_ktx
 
     // Unit Test
     testImplementation Dependencies.test_junit
