--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import deps.KotlinDeps
+
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
@@ -20,7 +22,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$Dependencies.kotlinVersion"
+
+    implementation KotlinDeps.kotlinJdk
 
     implementation project(":core")
     implementation project(':feature:feature-home')
