--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import deps.KotlinDeps
 
 buildscript {
     repositories {
@@ -7,8 +7,8 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.5.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$Dependencies.kotlinVersion"
+        classpath "com.android.tools.build:gradle:3.6.4"
+        classpath KotlinDeps.kotlinPlugin
     }
 }
 
@@ -24,12 +24,11 @@ subprojects {
     afterEvaluate { project ->
         if (project.hasProperty('android')) {
             android {
-                compileSdkVersion 29
-                buildToolsVersion "29.0.2"
+                compileSdkVersion 30
 
                 defaultConfig {
                     minSdkVersion 21
-                    targetSdkVersion 29
+                    targetSdkVersion 30
                     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
                 }
 
